--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    app.password.listener:
+        class: App\EventListener\PasswordListener
+        arguments: ['@security.password_encoder']
+        tags:
+            - { name: doctrine.event_listener, event: preUpdate }
+            - { name: doctrine.event_listener, event: prePersist }
