--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,10 @@ security:
             guard:
                 authenticators:
                     - App\Security\UserAuthenticator
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
 
             # activate different ways to authenticate
 
@@ -30,5 +34,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/new, roles: ROLE_USER }
+        # - { path: ^/.*/new, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
